--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "geocoder": "^0.2.3",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue2-google-maps": "^0.7.9"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
