--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "geocoder": "^0.2.3",
     "vue": "^2.3.3",
+    "vue-gmaps": "^0.2.1",
     "vue-router": "^2.3.1",
     "vue2-google-maps": "^0.7.9"
   },
