--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "element-ui": "^1.3.7",
+    "keen-ui": "^1.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vue2-google-maps": "^0.7.9"
